# cosine-kmeans-pipeline

./: README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/: defaults.yaml
src/kmcp/: cli.py  export_cpu.py  export_gpu.py  io.py  kmeans_faiss.py  normalize.py  select_k.py  types.py
