[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmcp"
version = "0.1.0"
description = "Cosine KMeans pipeline: check/normalize -> FAISS KMeans -> centroids -> top-m or full NxK distance export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "typer>=0.12",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scikit-learn>=1.3",
]

[project.scripts]
kmcp = "kmcp.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]